@startuml

title __COMPARISONOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      abstract class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator {
          + getOperatorExpression()
          # ComparisonOperator()
          {abstract} # getComparisonExpression()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.HBaseComparisonOperatorFactory {
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorEq()
          + newOperatorGt()
          + newOperatorGt()
          + newOperatorGt()
          + newOperatorGt()
          + newOperatorGt()
          + newOperatorGt()
          + newOperatorGte()
          + newOperatorGte()
          + newOperatorGte()
          + newOperatorGte()
          + newOperatorGte()
          + newOperatorGte()
          + newOperatorLt()
          + newOperatorLt()
          + newOperatorLt()
          + newOperatorLt()
          + newOperatorLt()
          + newOperatorLt()
          + newOperatorLte()
          + newOperatorLte()
          + newOperatorLte()
          + newOperatorLte()
          + newOperatorLte()
          + newOperatorLte()
          + newOperatorNe()
          + newOperatorNe()
          + newOperatorNe()
          + newOperatorNe()
          + newOperatorNe()
          + newOperatorNe()
          + newOperatorNe()
          + newOperatorNe()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorEqual {
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          {static} + newOperatorEqual()
          # getComparisonExpression()
          - OperatorEqual()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorGreaterThan {
          {static} + newOperatorGreaterThan()
          {static} + newOperatorGreaterThan()
          {static} + newOperatorGreaterThan()
          {static} + newOperatorGreaterThan()
          {static} + newOperatorGreaterThan()
          {static} + newOperatorGreaterThan()
          # getComparisonExpression()
          - OperatorGreaterThan()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorGreaterThanEqual {
          {static} + newOperatorGreaterThanEqual()
          {static} + newOperatorGreaterThanEqual()
          {static} + newOperatorGreaterThanEqual()
          {static} + newOperatorGreaterThanEqual()
          {static} + newOperatorGreaterThanEqual()
          {static} + newOperatorGreaterThanEqual()
          # getComparisonExpression()
          - OperatorGreaterThanEqual()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorLessThan {
          {static} + newOperatorLessThan()
          {static} + newOperatorLessThan()
          {static} + newOperatorLessThan()
          {static} + newOperatorLessThan()
          {static} + newOperatorLessThan()
          {static} + newOperatorLessThan()
          # getComparisonExpression()
          - OperatorLessThan()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorLessThanEqual {
          {static} + newOperatorLessThanEqual()
          {static} + newOperatorLessThanEqual()
          {static} + newOperatorLessThanEqual()
          {static} + newOperatorLessThanEqual()
          {static} + newOperatorLessThanEqual()
          {static} + newOperatorLessThanEqual()
          # getComparisonExpression()
          - OperatorLessThanEqual()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.comparisonOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorNotEqual {
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          {static} + newOperatorNotEqual()
          # getComparisonExpression()
          - OperatorNotEqual()
      }
    }
  }
  

  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.comparisonOperators.ComparisonOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.HBaseComparisonOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.comparisonOperators.BaseComparisonOperatorFactory
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorEqual -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorGreaterThan -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorGreaterThanEqual -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorLessThan -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorLessThanEqual -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.OperatorNotEqual -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.comparisonOperators.ComparisonOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
